separate rows for Bonmin and Couenne

--- a/index.html
+++ b/index.html
@@ -479,9 +479,24 @@
     
     <tr>
       <th>
-        <a href="https://www.coin-or.org">COIN</a>
-        <a href="https://projects.coin-or.org/OS">Optimization Services</a>
-        <a href="https://github.com/JuliaOpt/CoinOptServices.jl">(.jl)</a>
+        <a href="https://projects.coin-or.org/Bonmin">Bonmin</a>
+        <a href="https://github.com/JuliaOpt/CoinOptServices.jl">(via osil, CoinOptServices.jl)</a>
+      </th>
+
+      <td>&#10004;</td> <!-- LP -->
+      <td>&#10004;</td> <!-- MILP -->
+      <td>&#10004;</td> <!-- QCQP -->
+      <td>&#10004;</td> <!-- MIQCQP -->
+      <td></td> <!-- SDP -->
+      <td>&#10004;</td> <!-- NLP -->
+      <td>&#10004;</td> <!-- MINLP -->
+      <td></td> <!-- Other -->
+    </tr>
+    
+    <tr>
+      <th>
+        <a href="https://projects.coin-or.org/Couenne">Couenne</a>
+        <a href="https://github.com/JuliaOpt/CoinOptServices.jl">(via osil, CoinOptServices.jl)</a>
       </th>
 
       <td>&#10004;</td> <!-- LP -->
