Add JuliaCon shout out, close #16

--- a/index.html
+++ b/index.html
@@ -54,6 +54,16 @@
         </p>
       </div>
 
+      <hr>
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <h2>JuliaOpt at <a href="http://juliacon.org">JuliaCon 2015</a></h2>
+          <p>
+            There will be a JuliaOpt talk and three-hour workshop at JuliaCon 2015, held at MIT in Cambridge, Massachusetts from June 24th-28th. <a href="http://www.eventbrite.com/e/juliacon-2015-tickets-16517619645">Tickets are on sale now!</a>.
+          </p>
+        </div>
+      </div>
+      <hr>
 
       <!-- Julia & JuliaOpt-->
       <a id="about"></a>
