Replace QCQP with SOCP in table comments,
remove SOCP and MISOCP checkboxes from Bonmin and Couenne

--- a/index.html
+++ b/index.html
@@ -275,8 +275,8 @@
       <th><a href="https://github.com/JuliaOpt/JuMP.jl">JuMP</a></th>
       <td>&#10004;</td> <!-- LP -->
       <td>&#10004;</td> <!-- MILP -->
-      <td>&#10004;</td> <!-- QCQP -->
-      <td>&#10004;</td> <!-- MIQCQP -->
+      <td>&#10004;</td> <!-- SOCP -->
+      <td>&#10004;</td> <!-- MISOCP -->
       <td></td> <!-- SDP -->
       <td>&#10004;</td> <!-- NLP -->
       <td>&#10004;</td> <!-- MINLP -->
@@ -287,8 +287,8 @@
       <th><a href="https://github.com/cvxgrp/Convex.jl">Convex.jl</a></th>
       <td>&#10004;</td> <!-- LP -->
       <td>&#10004;</td> <!-- MILP -->
-      <td>&#10004;</td> <!-- QCQP -->
-      <td>&#10004;</td> <!-- MIQCQP -->
+      <td>&#10004;</td> <!-- SOCP -->
+      <td>&#10004;</td> <!-- MISOCP -->
       <td>&#10004;</td> <!-- SDP -->
       <td></td> <!-- NLP -->
       <td></td> <!-- MINLP -->
@@ -317,8 +317,8 @@
 
       <td>&#10004;</td> <!-- LP -->
       <td>&#10004;</td> <!-- MILP -->
-      <td>&#10004;</td> <!-- QCQP -->
-      <td>&#10004;</td> <!-- MIQCQP -->
+      <td></td> <!-- SOCP -->
+      <td></td> <!-- MISOCP -->
       <td></td> <!-- SDP -->
       <td>&#10004;</td> <!-- NLP -->
       <td>&#10004;</td> <!-- MINLP -->
@@ -333,8 +333,8 @@
 
       <td>&#10004;</td> <!-- LP -->
       <td>&#10004;</td> <!-- MILP -->
-      <td></td> <!-- QCQP -->
-      <td></td> <!-- MIQCQP -->
+      <td></td> <!-- SOCP -->
+      <td></td> <!-- MISOCP -->
       <td></td> <!-- SDP -->
       <td></td> <!-- NLP -->
       <td></td> <!-- MINLP -->
@@ -349,8 +349,8 @@
 
       <td>&#10004;</td> <!-- LP -->
       <td></td> <!-- MILP -->
-      <td></td> <!-- QCQP -->
-      <td></td> <!-- MIQCQP -->
+      <td></td> <!-- SOCP -->
+      <td></td> <!-- MISOCP -->
       <td></td> <!-- SDP -->
       <td></td> <!-- NLP -->
       <td></td> <!-- MINLP -->
@@ -365,8 +365,8 @@
 
       <td>&#10004;</td> <!-- LP -->
       <td>&#10004;</td> <!-- MILP -->
-      <td>&#10004;</td> <!-- QCQP -->
-      <td>&#10004;</td> <!-- MIQCQP -->
+      <td></td> <!-- SOCP -->
+      <td></td> <!-- MISOCP -->
       <td></td> <!-- SDP -->
       <td>&#10004;</td> <!-- NLP -->
       <td>&#10004;</td> <!-- MINLP -->
@@ -381,8 +381,8 @@
       <!--<td><a href="https://github.com/JuliaOpt/CPLEX.jl">CPLEX.jl</a></td>-->
       <td>&#10004;</td> <!-- LP -->
       <td>&#10004;</td> <!-- MILP -->
-      <td>&#10004;</td> <!-- QCQP -->
-      <td>&#10004;</td> <!-- MIQCQP -->
+      <td>&#10004;</td> <!-- SOCP -->
+      <td>&#10004;</td> <!-- MISOCP -->
       <td></td> <!-- SDP -->
       <td></td> <!-- NLP -->
       <td></td> <!-- MINLP -->
@@ -397,8 +397,8 @@
       <!--<td><a href="https://github.com/JuliaOpt/ECOS.jl">ECOS.jl</a></td>-->
       <td>&#10004;</td> <!-- LP -->
       <td></td> <!-- MILP -->
-      <td>&#10004;</td> <!-- QCQP -->
-      <td></td> <!-- MIQCQP -->
+      <td>&#10004;</td> <!-- SOCP -->
+      <td></td> <!-- MISOCP -->
       <td></td> <!-- SDP -->
       <td></td> <!-- NLP -->
       <td></td> <!-- MINLP -->
@@ -413,8 +413,8 @@
       <!--<td><a href="https://github.com/JuliaOpt/GLPK.jl">GLPK.jl</a></td>-->
       <td>&#10004;</td> <!-- LP -->
       <td>&#10004;</td> <!-- MILP -->
-      <td></td> <!-- QCQP -->
-      <td></td> <!-- MIQCQP -->
+      <td></td> <!-- SOCP -->
+      <td></td> <!-- MISOCP -->
       <td></td> <!-- SDP -->
       <td></td> <!-- NLP -->
       <td></td> <!-- MINLP -->
@@ -429,8 +429,8 @@
       <!--<td><a href="https://github.com/JuliaOpt/Gurobi.jl">Gurobi.jl</a></td>-->
       <td>&#10004;</td> <!-- LP -->
       <td>&#10004;</td> <!-- MILP -->
-      <td>&#10004;</td> <!-- QCQP -->
-      <td>&#10004;</td> <!-- MIQCQP -->
+      <td>&#10004;</td> <!-- SOCP -->
+      <td>&#10004;</td> <!-- MISOCP -->
       <td></td> <!-- SDP -->
       <td></td> <!-- NLP -->
       <td></td> <!-- MINLP -->
@@ -445,8 +445,8 @@
       <!--<td><a href="https://github.com/JuliaOpt/Ipopt.jl">Ipopt.jl</a></td>-->
       <td>&#10004;</td> <!-- LP -->
       <td></td> <!-- MILP -->
-      <td></td> <!-- QCQP -->
-      <td></td> <!-- MIQCQP -->
+      <td></td> <!-- SOCP -->
+      <td></td> <!-- MISOCP -->
       <td></td> <!-- SDP -->
       <td>&#10004;</td> <!-- NLP -->
       <td></td> <!-- MINLP -->
@@ -461,8 +461,8 @@
       <!--<td><a href="https://github.com/JuliaOpt/KNITRO.jl/">KNITRO.jl</a></td>-->
       <td>&#10004;</td> <!-- LP -->
       <td>&#10004;</td></td> <!-- MILP -->
-      <td></td> <!-- QCQP -->
-      <td></td> <!-- MIQCQP -->
+      <td></td> <!-- SOCP -->
+      <td></td> <!-- MISOCP -->
       <td></td> <!-- SDP -->
       <td>&#10004;</td> <!-- NLP -->
       <td>&#10004;</td></td> <!-- MINLP -->
@@ -477,8 +477,8 @@
       <!--<td><a href="https://github.com/JuliaOpt/Mosek.jl">Mosek.jl</a></td>-->
       <td>&#10004;</td> <!-- LP -->
       <td>&#10004;</td> <!-- MILP -->
-      <td>&#10004;</td> <!-- QCQP -->
-      <td>&#10004;</td> <!-- MIQCQP -->
+      <td>&#10004;</td> <!-- SOCP -->
+      <td>&#10004;</td> <!-- MISOCP -->
       <td>&#10004;</td> <!-- SDP -->
       <td>&#10004;<small>1</small></td> <!-- NLP -->
       <td></td> <!-- MINLP -->
@@ -493,8 +493,8 @@
       <!--<td><a href="https://github.com/JuliaOpt/NLopt.jl">NLopt.jl</a></td>-->
       <td></td> <!-- LP -->
       <td></td> <!-- MILP -->
-      <td></td> <!-- QCQP -->
-      <td></td> <!-- MIQCQP -->
+      <td></td> <!-- SOCP -->
+      <td></td> <!-- MISOCP -->
       <td></td> <!-- SDP -->
       <td>&#10004;</td> <!-- NLP -->
       <td></td> <!-- MINLP -->
@@ -509,8 +509,8 @@
       <!--<td><a href="https://github.com/JuliaOpt/NLopt.jl">NLopt.jl</a></td>-->
       <td>&#10004;</td> <!-- LP -->
       <td></td> <!-- MILP -->
-      <td>&#10004;</td> <!-- QCQP -->
-      <td></td> <!-- MIQCQP -->
+      <td>&#10004;</td> <!-- SOCP -->
+      <td></td> <!-- MISOCP -->
       <td>&#10004;</td> <!-- SDP -->
       <td></td> <!-- NLP -->
       <td></td> <!-- MINLP -->
