Remove JuliaCon banner

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
 
       <hr>
-      <div class="row">
+      <!--<div class="row">
         <div class="col-md-12 text-center">
           <h2>JuliaOpt at <a href="http://juliacon.org">JuliaCon 2015</a></h2>
           <p>
@@ -75,7 +75,7 @@
           </p>
         </div>
       </div>
-      <hr>
+      <hr>-->
 
       <!-- Julia & JuliaOpt-->
       <a id="about"></a>
