point to AmplNLWriter for bonmin and couenne

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
     <tr>
       <th>
         <a href="https://projects.coin-or.org/Bonmin">Bonmin</a>
-        <a href="https://github.com/JuliaOpt/CoinOptServices.jl">(via CoinOptServices.jl)</a>
+        <a href="https://github.com/JuliaOpt/AmplNLWriter.jl">(via AmplNLWriter.jl)</a>
       </th>
 
       <td>&#10004;</td> <!-- LP -->
@@ -372,7 +372,7 @@
     <tr>
       <th>
         <a href="https://projects.coin-or.org/Couenne">Couenne</a>
-        <a href="https://github.com/JuliaOpt/CoinOptServices.jl">(via CoinOptServices.jl)</a>
+        <a href="https://github.com/JuliaOpt/AmplNLWriter.jl">(via AmplNLWriter.jl)</a>
       </th>
 
       <td>&#10004;</td> <!-- LP -->
