update video links

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <p>
             JuliaOpt is an organization that brings together packages written in Julia that are related to optimization. All JuliaOpt packages should be high-quality, documented, tested, support the main operating systems, and interact with each other.
             <ul>
-              <li><b>Overview</b>: <a href="http://youtu.be/VwZvUvXX-vY">presentation from JuliaCon 2014</a></li>
+              <li><b>Overview</b>: <a href="https://www.youtube.com/watch?v=7LNeR299q88">presentation</a> and <a href="https://www.youtube.com/watch?v=nnL7yLMVu6c">workshop</a> from JuliaCon 2015</a></li>
               <li><b>Code</b>: <a href="http://github.com/JuliaOpt">github.com/JuliaOpt</a></li>
               <li><b>Mailing list</b>: <a href="https://groups.google.com/forum/#!forum/julia-opt">julia-opt</a></li>
             </ul>
