--- a/index.html
+++ b/index.html
@@ -575,13 +575,13 @@
               "Extended Formulations in Mixed Integer Conic Quadratic Programming". 2015.
               <a href="http://web.mit.edu/jvielma/www/publications/Extended-Formulations-in-Mixed-Integer-Conic.pdf">[PDF]</a>
             </li>
+            <li>I. Dunning, V. Gupta, A. King, J. Kung, M. Lubin, and J. Silberholz, "A course on advanced software tools for Operations Research and Analytics". <i>INFORMS Transactions on Education</i> 15(2), pages 169-179, 2015. <a href="http://dx.doi.org/10.1287/ited.2014.0131">[DOI]</a> <a href="http://josilber.scripts.mit.edu/IAPEducationPaperDistribute.pdf">[PDF]</a>
+            </li>
             <li>
               J. Huchette, M. Lubin, and C. Petra.
               "Parallel algebraic modeling for stochastic optimization". 2014.
-              <i>Proceedings of HPTCDL '14, 2014</i>.
+              <i>Proceedings of HPTCDL '14</i>.
               <a href="http://www.mcs.anl.gov/~petra/papers/StochJuMP.pdf">[PDF]</a>
-            </li>
-            <li>I. Dunning, V. Gupta, A. King, J. Kung, M. Lubin, and J. Silberholz, "A course on advanced software tools for Operations Research and Analytics". <i>INFORMS Transactions on Education</i> 15(2), pages 169-179, 2015. <a href="http://dx.doi.org/10.1287/ited.2014.0131">[DOI]</a> <a href="http://josilber.scripts.mit.edu/IAPEducationPaperDistribute.pdf">[PDF]</a>
             </li>
             <li>
               V. Gupta, "Data-driven models for uncertainty and behavior". 2014. <a href="http://hdl.handle.net/1721.1/91301">[PDF]</a>
