JuMP supports SDPs?

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
       <td>&#10004;</td> <!-- MILP -->
       <td>&#10004;</td> <!-- SOCP -->
       <td>&#10004;</td> <!-- MISOCP -->
-      <td></td> <!-- SDP -->
+      <td>&#10004;</td> <!-- SDP -->
       <td>&#10004;</td> <!-- NLP -->
       <td>&#10004;</td> <!-- MINLP -->
       <td></td> <!-- Other -->
