--- a/index.html
+++ b/index.html
@@ -540,7 +540,15 @@
           <h2>Using JuliaOpt</h2>
           <h3>Universities using JuliaOpt</h3>
           <ul>
-            MIT, Sapienza Università di Roma, Stanford University, Universidad Carlos III de Madrid,  Université de Liège, the University at Buffalo, the University of Iowa, the University of Southern California, and the University of South Florida.
+            <li>MIT</li>
+            <li>Sapienza Università di Roma</li>
+            <li>Stanford University</li>
+            <li>Universidad Carlos III de Madrid</li>
+            <li>Université de Liège</li>
+            <li>the University at Buffalo</li>
+            <li>the University of Iowa</li>
+            <li>the University of Southern California</li>
+            <li>and the University of South Florida</li>
           </ul>          
           <h3>Papers about JuliaOpt packages</h3>
           <ul>
