--- a/index.html
+++ b/index.html
@@ -545,10 +545,10 @@
             <li>Stanford University</li>
             <li>Universidad Carlos III de Madrid</li>
             <li>Université de Liège</li>
-            <li>the University at Buffalo</li>
-            <li>the University of Iowa</li>
-            <li>the University of Southern California</li>
-            <li>and the University of South Florida</li>
+            <li>University at Buffalo</li>
+            <li>University of Iowa</li>
+            <li>University of Southern California</li>
+            <li>University of South Florida</li>
           </ul>          
           <h3>Papers about JuliaOpt packages</h3>
           <ul>
