--- a/index.html
+++ b/index.html
@@ -564,6 +564,7 @@
             <li>University of Iowa</li>
             <li>University of Southern California</li>
             <li>University of South Florida</li>
+            <li>Virginia Commonwealth University</li>
           </ul>          
           <h3>Papers using JuliaOpt packages</h3>
           <ul>
