KNITRO -> Artelys Knitro

--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
     
     <tr>
       <th>
-        <a href="http://www.ziena.com/knitro.htm">KNITRO</a>
+        <a href="http://artelys.com/en/optimization-tools/knitro">Artelys Knitro</a>
         <a href="https://github.com/JuliaOpt/KNITRO.jl">(.jl)</a>
       </th>
       <!--<td><a href="https://github.com/JuliaOpt/KNITRO.jl/">KNITRO.jl</a></td>-->
