--- a/notebooks/Shuvomoy - Benders decomposition.html
+++ b/notebooks/Shuvomoy - Benders decomposition.html
@@ -1223,6 +1223,11 @@ Elapsed time = 0.83 sec. (0.04 ticks, tree = 0.00 MB, solutions = 1)
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <!-- MathJax -->
+    <script type="text/x-mathjax-config">
+        MathJax.Hub.Config({
+          tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}
+        });
+    </script>
     <script src='https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML'></script>
   </body>
 </html>
