--- a/notebooks/Shuvomoy - Getting started with JuMP.html
+++ b/notebooks/Shuvomoy - Getting started with JuMP.html
@@ -529,16 +529,16 @@ y = 0.0
 <p>This was certainly not the most exciting optimization problem to solve. This was for test purpose only. However, before going into the structure of a JuMP model, let us learn how to represent vectors in Julia.</p>
 <h1 id="Representing-vectors-in-Julia">Representing vectors in Julia<a class="anchor-link" href="#Representing-vectors-in-Julia">&#182;</a></h1><ul>
 <li><p>A column vector, $y=(y_1, y_2, \ldots, y_n)= \begin{pmatrix}
-y_1 \
-y_2 \
-. \
-. \
+y_1 \\
+y_2 \\
+. \\
+. \\
 y_n
 \end{pmatrix} \in \mathbb{R}^n$ will be written in Julia as <code>[y[1];y[2];...;y[n]]</code>.</p>
 <p>For example to create column vector $\begin{pmatrix}
-3 \
-2.4 \
-9.1 \
+3 \\
+2.4 \\
+9.1 
 \end{pmatrix}$  use: <code>[3; 2.4; 9.1]</code>.</p>
 </li>
 </ul>
@@ -1900,6 +1900,11 @@ Optimal y = y: 1 dimensions:
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <!-- MathJax -->
+    <script type="text/x-mathjax-config">
+        MathJax.Hub.Config({
+          tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}
+        });
+    </script>
     <script src='https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML'></script>
   </body>
 </html>
